Add database connection example and setup docs

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,3 @@
-DATABASE_URL="postgresql://usuario:password@host.neon.tech:5432/db?sslmode=require"
-PORT=3000
+# Example environment configuration for the backend server
+# Copy this file to .env and adjust the values as needed.
+DATABASE_URL="postgresql://neondb_owner:npg_qrXE48eofWVC@ep-divine-shadow-adp4gjr5-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
